--- a/styles.css
+++ b/styles.css
@@ -5,20 +5,20 @@
 }
 body{
     color: rgb(25, 146, 80) ;   
-    background-color: Yellow;
+    background-color: rgb(125, 146, 150);
     font-size: 150%;
     font-family: 'Sacramento', cursive;
     margin: 5em 25%;
  }
 
 h1 {
-  color: rgb(255, 255, 255);
+  color:black;
   text-align: center;
 }
 h2{
-    color: yellowgreen
+    color: black
 }
 p {
-  font-family: verdana;
+  font-family: helvetica;
   font-size: 25px;
 }
