padding and margins

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,10 @@ body{
 h1 {
   color:black;
   text-align: center;
+  padding-top: 60px;
+  padding-right: 30px;
+  padding-bottom: 60px;
+  padding-left: 30px;
 }
 h2{
     color: black
@@ -17,4 +21,8 @@ h2{
 p {
   font-family: helvetica;
   font-size: 25px;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  margin-right: 150px;
+  margin-left: 150px;
 }
