--- a/styles.css
+++ b/styles.css
@@ -4,16 +4,13 @@ body{
     background-color: rgb(125, 146, 150);
     font-size: 150%;
     font-family: 'helvetica';
-    margin: 5em 10%;
+    /* margin: 5em 10%; */
  }
 
 h1 {
   color:black;
   text-align: center;
-  padding-top: 60px;
-  padding-right: 30px;
-  padding-bottom: 60px;
-  padding-left: 30px;
+  border: 5px solid black;
 }
 h2{
     color: black
@@ -21,8 +18,10 @@ h2{
 p {
   font-family: helvetica;
   font-size: 25px;
-  margin-top: 100px;
+  /* css idcss id
+  border: 1px solid black; */
+  /* margin-top: 100px;
   margin-bottom: 100px;
   margin-right: 150px;
-  margin-left: 150px;
+  margin-left: 150px; */
 }
